[metadata]
name = host-scanner-hebertluiz
version = 0.0.1
author = hebertluiz
author_email = hebert.luiz.hb@gmail.com
description = A package to scan network hosts and manage hosts information
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hebertluiz/host-scanner
project_urls =
    Bug Tracker = https://github.com/hebertluiz/host-scanner/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
